# wattetheria-gateway

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  db.rs  gateway_identity.rs  gateway_network.rs  http.rs  lib.rs  main.rs  models.rs  node_client.rs  registry_client.rs  state.rs  verify.rs
tests/: gateway_api.rs
