[package]
name = "wattetheria-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-nats = "0.39"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.8"
tower = { version = "0.5", features = ["util"] }
